# market-analyst-agent

./: .env.example  .gitignore  Makefile  README.md  plan.md  pyproject.toml
docker/: Dockerfile  docker-compose.yml
skills/: earnings_analysis.md  sector_comparison.md
src/market_analyst/: __init__.py  agent.py  app.py  cli.py  constants.py  logging_config.py  schemas.py  utils.py
src/market_analyst/memory/: __init__.py  checkpointer.py  document.py  hot.py  long.py  postgres.py  postgres_store.py  profile.py  qdrant.py  qdrant_store.py  redis_store.py
src/market_analyst/nodes/: __init__.py  executor.py  guardian.py  planner.py  reporter.py  rewoo_planner.py  rewoo_solver.py  rewoo_worker.py  router.py  trade_executor.py
src/market_analyst/tools/: __init__.py  cli_tools.py  code_exec.py  search.py  skills.py  stock.py  trade.py
src/market_analyst/workflows/: analysis_workflow.py  combined_workflow.py  trade_workflow.py
tests/: test_guardian_demo.py  test_memory.py  test_tools.py  test_workflows.py
