[project]
name = "market-analyst-agent"
version = "0.1.0"
description = "Institutional Market Analyst Agent - Demo for Engineering the Agentic Stack blog series"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "langgraph>=0.2.0",
    "langchain-anthropic>=0.3.0",
    "langgraph-checkpoint-postgres>=2.0.0",
    "yfinance>=0.2.50",
    "tavily-python>=0.5.0",
    "pydantic>=2.0.0",
    "python-dotenv>=1.0.0",
    "psycopg[binary]>=3.2.0",
    "langgraph-checkpoint-redis>=0.3.3",
    "qdrant-client>=1.16.2",
    "gradio>=6.4.0",
    "tenacity>=8.0.0",
    "langchain-experimental>=0.3.0",
]

[project.scripts]
market-analyst = "market_analyst.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/market_analyst"]

[dependency-groups]
dev = [
    "mypy>=1.19.1",
    "pytest>=9.0.2",
    "pytest-mock>=3.15.1",
    "ruff>=0.14.14",
]

[tool.ruff]
line-length = 160
target-version = "py313"

[tool.ruff.lint]
select = ["E", "F", "I", "W", "B", "C"]
# E: pycodestyle errors
# F: pyflakes
# I: isort
# W: pycodestyle warnings
# B: flake8-bugbear
# C: mccabe complexity

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v --tb=short"
markers = [
    "integration: marks tests requiring external services",
    "slow: marks slow-running tests",
]

[tool.mypy]
python_version = "3.13"
strict = true
ignore_missing_imports = true
